--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,7 @@ body,
 
 body {
   font-family: sans-serif;
-  background-color: #f9fbfd;
+  background-color: #028090;
 }
 
 .wrapper {
@@ -27,15 +27,19 @@ header {
   text-align: center;
   padding: 20px;
   padding-top: 0px;
-  color: hsl(206, 17%, 28%);
+  color: #f0f3bd;
+}
+
+h2 {
+  text-align: center;
 }
 
 .card {
-  background-color: hsl(0, 0%, 100%);
+  background-color: #00a896;
   border-radius: 5px;
   border-width: 1px;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px 0px;
-  color: hsl(206, 17%, 28%);
+  color: #1d1a1c;
   font-size: 18px;
   margin: 0 auto;
   max-width: 800px;
@@ -46,7 +50,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #f0f3bd;
   height: 2px;
 }
 
@@ -62,7 +66,7 @@ header {
   content: " ";
   display: block;
   width: 100%;
-  background: #e7e9eb;
+  background: #f0f3bd;
   height: 2px;
 }
 
@@ -74,11 +78,11 @@ header {
 
 .btn {
   border: none;
-  background-color: hsl(360, 91%, 36%);
+  background-color: #F0F3BD;
   border-radius: 25px;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 6px 0px rgba(0, 0, 0, 0.2) 0px 1px 1px
     0px;
-  color: hsl(0, 0%, 100%);
+  color: #1d1a1c;
   display: inline-block;
   font-size: 22px;
   line-height: 22px;
@@ -90,7 +94,7 @@ header {
 
 button[disabled] {
   cursor: default;
-  background: #c0c7cf;
+  background: #f0f3bd;
 }
 
 .float-right {
@@ -112,7 +116,7 @@ button[disabled] {
   text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
-  border: 2px dashed #c0c7cf;
+  border: 2px solid #05668D;
   border-radius: 6px;
   resize: none;
   overflow: hidden;
